# veil

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  PUBLISHING.md  README.md  TASKS.md  TASKS_ARCHIVE.md  deny.toml  files_to_check.md  prebuild.sh  specification.md  test.sh
crates/ogate/: Cargo.toml  README.md
crates/ogate/src/: app_cert_gate.rs  app_id.rs  batch.rs  bridge.rs  cert_message.rs  cli.rs  config.rs  config_template.rs  lib.rs  main.rs  routing.rs
crates/ogate/src/tun/: freebsd.rs  mod.rs  standard.rs
crates/oproxy/: Cargo.toml  README.md
crates/oproxy/src/: app_cert_gate.rs  authz.rs  config.rs  config_template.rs  connector.rs  lib.rs  logging.rs  routing.rs  timeouts.rs  wire.rs
crates/oproxy/src/inbound/: http.rs  mod.rs  socks5.rs  tproxy.rs  tproxy_unix.rs
crates/veil-abuse/: Cargo.toml
crates/veil-abuse/src/: backpressure.rs  ban_list.rs  bandwidth_gate.rs  dht_quota.rs  identity_quota.rs  lib.rs  per_peer_limiter.rs  pow_verifier.rs  rate_limiter.rs  replay_window.rs  scanner_shield.rs  violation_tracker.rs
crates/veil-adaptive/: Cargo.toml
crates/veil-adaptive/src/: lib.rs
crates/veil-anonymity/: Cargo.toml
crates/veil-anonymity/src/: blinded_descriptor.rs  cell.rs  circuit.rs  circuit_builder.rs  circuit_data.rs  circuit_origin.rs  circuit_register.rs  circuit_setup.rs  circuit_table.rs  circuit_wire.rs  directory.rs  lib.rs  mailbox_cookie_registry.rs  onion.rs  packet.rs  push_envelope.rs  relay_reputation.rs  rendezvous.rs  sender.rs
crates/veil-anycast/: Cargo.toml
crates/veil-anycast/src/: lib.rs  reputation.rs
crates/veil-app/: Cargo.toml
crates/veil-app/src/: address.rs  lib.rs  registry.rs  streams.rs
crates/veil-bloom/: Cargo.toml
crates/veil-bloom/src/: lib.rs
crates/veil-bootstrap/: Cargo.toml
crates/veil-bootstrap/src/: cache.rs  dns.rs  encrypted_invite.rs  https.rs  invite.rs  lib.rs  seeds.rs  signed_bundle.rs  signed_invite.rs
crates/veil-bufpool/: Cargo.toml
crates/veil-bufpool/benches/: pool_vs_malloc.rs
crates/veil-bufpool/src/: lib.rs  shared_slab.rs
crates/veil-cfg/: Cargo.toml
crates/veil-cfg/src/: access.rs  adaptive.rs  error.rs  file_format.rs  identity.rs  identity_master.rs  identity_master_file.rs  identity_master_qr.rs  identity_ops.rs  identity_policy.rs  instance.rs  keys.rs  lib.rs  locate.rs  model.rs  observability_glue.rs  runtime.rs  signed_config.rs  sovereign_flow.rs  store.rs  test_support.rs  transport_glue.rs  value.rs
crates/veil-cfg/src/format/: json.rs  mod.rs  toml.rs
crates/veil-cfg/src/validate/: identity.rs  mod.rs  report.rs  structural.rs
crates/veil-cli/: Cargo.toml
crates/veil-cli/src/: lib.rs  test_support.rs
crates/veil-cli/src/cmd/: cli.rs  (+22 more)
crates/veil-congestion/: Cargo.toml
crates/veil-congestion/src/: lib.rs
crates/veil-crypto/: Cargo.toml
crates/veil-crypto/src/: identity.rs  identity_fingerprint.rs  kex.rs  key_blinding.rs  lib.rs  nickname.rs  pair_oob.rs  session_cipher.rs  session_kdf.rs  signature.rs  types.rs  wake_hmac.rs  x3dh.rs
crates/veil-dht/: Cargo.toml
crates/veil-dht/src/: bucket_pollution_sim.rs  churn_sim.rs  iterative.rs  kademlia.rs  lib.rs  lookup_cache.rs  network_querier.rs  republish.rs  routing.rs  shard.rs  store.rs  traits.rs  transport_cache.rs
crates/veil-discovery/: Cargo.toml
crates/veil-discovery/src/: announcement_sig.rs  directory.rs  lib.rs  service.rs
crates/veil-dispatcher/: Cargo.toml
crates/veil-dispatcher-state/: Cargo.toml
crates/veil-dispatcher-state/src/: lib.rs
crates/veil-dispatcher/src/: anonymity.rs  app.rs  control.rs  delivery.rs  diag.rs  discovery.rs  envelope_chunks.rs  lib.rs  pending_ack.rs  routing.rs  session.rs  sink_impl.rs
crates/veil-e2e/: Cargo.toml
crates/veil-e2e/src/: lib.rs
crates/veil-error/: Cargo.toml
crates/veil-error/src/: lib.rs
crates/veil-fingerprint/: Cargo.toml
crates/veil-fingerprint/src/: lib.rs  pcap.rs
crates/veil-gateway/: Cargo.toml
crates/veil-gateway/src/: attachment.rs  endpoint.rs  lease.rs  lib.rs  service.rs
crates/veil-identity/: Cargo.toml
crates/veil-identity/src/: auth_deliver.rs  error.rs  freshness.rs  identity_policy.rs  instance.rs  integration_tests.rs  lib.rs  mailbox_seal.rs  master_file.rs  master_qr.rs  master_seed.rs  migration.rs  mlkem_fanout.rs  network_access.rs  network_ban.rs  network_cert.rs  pair_runtime.rs  pair_transport.rs  publish.rs  resolver.rs  signing_key.rs  sovereign.rs  sovereign_bundle.rs  sovereign_flow.rs  verify.rs
crates/veil-invite/: Cargo.toml
crates/veil-invite/src/: lib.rs
crates/veil-ipc/: Cargo.toml
crates/veil-ipc/src/: bridge.rs  frame_io.rs  lib.rs  path.rs  server.rs  server_tests_tcp.rs  server_tests_unix.rs  streams.rs  transport.rs
crates/veil-local-transport/: Cargo.toml
crates/veil-local-transport/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_app_decode.rs  fuzz_cipher_open.rs  fuzz_delivery_decode.rs  fuzz_ipc_decode.rs  fuzz_proto_decode.rs  fuzz_routing_decode.rs  fuzz_session_decode.rs
veilclient/: Cargo.toml
veilclient/examples/: chat_client.rs  chat_node.rs  chat_server.rs  echo_server.rs  ping_client.rs  throughput_bench.rs
veilclient/src/: client.rs  error.rs  handle.rs  lib.rs  rendezvous.rs  stream.rs
veilclient/tests/: integration.rs
veilcore/: Cargo.toml
veilcore/benches/: adversary_validation.rs  dht_lookup.rs  dht_store_throughput.rs  hybrid_kex.rs  recursive_relay_chain.rs  session_scale.rs  socks5_throughput.rs  voice_stream.rs
veilcore/src/: crypto.rs  lib.rs  proto.rs  test_support.rs  transport.rs  util.rs
veilcore/src/node/: abuse.rs  anonymity.rs  anycast.rs  app.rs  bootstrap.rs  control.rs  dht.rs  discovery.rs  gateway_list.rs  mesh.rs  mod.rs  nat.rs  observability.rs  session_glue.rs  transfer.rs  transport_hints.rs  update.rs
veilcore/src/sim/: events.rs  loss.rs  mod.rs  network.rs  node.rs  scenarios.rs
veilcore/tests/: dht_key_domain_separation.rs  discovery_auto_publish.rs  frame_broadcaster_adapter.rs  identity_contact_roundtrip.rs  mesh_bridge_integration.rs  node_id_consistency.rs
(+638 files in other folders)
