[package]
name = "veil-abuse"
version = "0.2.0"
edition = "2024"
description = "Veil network abuse-mitigation primitives: per-peer rate limiter, ban list, violation tracker, replay window, PoW verifier, bandwidth gate, identity quota, DHT quota, backpressure. Phase 6 extraction from veilcore."
license = "AGPL-3.0-or-later"

[dependencies]
veil-error = { path = "../veil-error" }
veil-proto = { path = "../veil-proto" }
veil-types = { path = "../veil-types" }
veil-util = { path = "../veil-util" }

blake3 = "1.5"
log = "0.4"
thiserror = "2.0"

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
