[package]
name = "veil-adaptive"
version = "0.1.1"
edition = "2024"
description = "Network-size-aware adaptive parameter formulas (k-bucket size, gossip TTL, route-cache capacity, responder-proximity gate, PoW difficulty) for the Veil network."
license = "AGPL-3.0-or-later"

[dependencies]
# Tier-0 leaf crate: pure formulas + a struct.  Zero internal deps.

[lints]
workspace = true
