[package]
name = "veil-anonymity"
version = "0.3.1"
edition = "2024"
description = "Veil network anonymity stack: onion routing, fixed-size cells, circuits, rendezvous points. Phase 4 extraction from veilcore."
license = "AGPL-3.0-or-later"

[dependencies]
veil-crypto = { path = "../veil-crypto" }
veil-error = { path = "../veil-error" }
veil-types = { path = "../veil-types" }
veil-util = { path = "../veil-util" }

base64 = "0.22"
blake3 = "1.5"
chacha20 = "0.9"
chacha20poly1305 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
thiserror = "2.0"
x25519-dalek = { version = "2", features = ["static_secrets"] }
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.42", features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
