[package]
name = "veil-anycast"
version = "0.1.0"
edition = "2024"
description = "Anycast service-address resolution: stores AnycastList records in the local DHT, weighted-random candidate selection from healthy services. Phase 6 extraction from veilcore."
license = "AGPL-3.0-or-later"

[dependencies]
veil-dht = { path = "../veil-dht" }
veil-proto = { path = "../veil-proto" }
veil-util = { path = "../veil-util" }

# Ed25519 used by `advertise_signed` to bind the record к the local node's
# identity key. Required public API; pulled in directly here rather than
# re-exporting от veil-proto к keep dependency layering explicit.
ed25519-dalek = { version = "2", features = ["rand_core"] }

[dev-dependencies]
# Used only by SignedBound policy tests to derive `node_id` from а signing
# key's pubkey the same way the sovereign-identity layer does
# (`BLAKE3(pubkey)`).  Production code never recomputes this — the binding
# check lives in `veil_proto::anycast::AnycastRecord::verify_owner_binding`,
# which has its own `blake3` dep.
blake3 = "1"

[lints]
workspace = true
