[package]
name = "veil-congestion"
version = "0.1.1"
edition = "2024"
description = "Per-node congestion monitor: tracks load (relay sessions, total sessions, queue depth), exposes a 0..=255 congestion score + admission-control flag. Phase 3 prep of veilcore extraction."
license = "AGPL-3.0-or-later"

[dependencies]
veil-cfg = { path = "../veil-cfg" }

tokio = { version = "1", features = ["sync"] }

[lints]
workspace = true
