[package]
name = "veil-dispatcher-state"
version = "0.1.1"
edition = "2024"
description = "Pure-data state types shared between FrameDispatcher and the IPC server: PendingRecursive (DHT recursive query bookkeeping, Epic 270), CaptureEvent (debug capture frame snapshot, Epic 63), DiagEvent (Pong / TraceHop reply, Epic 63)."
license = "AGPL-3.0-or-later"

[dependencies]
tokio = { version = "1.42", features = ["sync"] }

[lints]
workspace = true
